<resources>
    <string name="app_name">TempConverseApp</string>
    <string name="Temperature">TextView</string>
    <string name="temperature">Temperature</string>
    <string name="todo">TODO</string>
    <string name="result">Result</string>
    <string name="celsius_to_fahrenheit">CELSIUS TO FAHRENHEIT</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="enter_celsius_here">Enter Celsius Here</string>
    <string name="fahrenheit_to_celsius">FAHRENHEIT TO CELSIUS</string>
    <string name="enter_fahreneheit_here">Enter Fahreneheit Here</string>
    <string name="celsius">Celsius</string>
    <string name="todo1">TODO</string>

    <string-array name="tempUnits">
        <item>Celsius to Fahrenheit</item>
        <item>Fahrenheit to Celsius</item>
        <item>Celsius to Kelvin</item>
    </string-array>
</resources>